@@ -1,5 +1,8 @@
 2006-02-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/Monitor.pm:
+	New monitor parameter: "severity"
+
 	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Cisco Docsis bundle
 	interfaces excluded from discovery
 
